--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Magical fluffy pancakes</title>
 
-        <link rel="stylesheet" href="./src/styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="./src/styles/style.css" type="text/css">
 
 
     </head>
