--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <h3>Cooking for coders</h3>
     </div>
     
-    <div id='titlebox>'
+    <div id='titlebox'>
     <h2>Magical Fluffy pancakes</h2>
     <img src="https://img.taste.com.au/G32pURko/w643-h428-cfill-q90/taste/2017/07/chocolate-cake-pancakes-128426-1.jpg" alt="A fruity-chocolately stack of pancakes">
     <p>Chocolate can be good only when...<br>...there are pancakes!
