--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </div>
     <div>
        <p>Pancakes are absolutely great.<br>I can't live without them. <br>Quote Myself</p> 
-    </div class="listBoxIngredients">
-    <h3> Ingredients</h3>
+    </div>
+    <h3> class="listBoxIngredients"
+         Ingredients</h3>
     <ul>
         <li>Passion</li>
         <li>Time</li>
